--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,3 +1,13 @@
-<button class="btn btn-primary" [disabled]="!allowNewServer">Add server</button>
+
+<label>Server Name</label>
+
+<div>
+<input type="text" class="form-control" [(ngModel)]="serverName">
+<div>
+
+<button class="btn btn-primary" [disabled]="allowNewServer" (click)="onCreateServer()">Add server</button>
+
+<p [innerText]="serverName"></p>
+
 <app-server> </app-server>
 <app-server> </app-server>
