--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,4 +1,4 @@
-<p [ngStyle]="{backgroundColor: getColor()}">
-{{'server'}} with ID {{serverId}} is {{serverStatus}}
+<p [ngStyle]="{ backgroundColor: getColor() }"
+[ngClass]="getClass()">
+  {{ 'server' }} with ID {{ serverId }} is {{ serverStatus }}
 </p>
-
