2 files modified, 3 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-servers>loading</app-servers>
-<!-- <app-username></app-username> -->
+<!-- <app-servers>loading</app-servers> -->
+<app-details></app-details>
